--- a/hyperparameters.yml
+++ b/hyperparameters.yml
@@ -5,3 +5,6 @@ toy-env:
   epsilon_init: 1
   epsilon_decay: 0.9995
   epsilon_min: 0.05
+  network_sync_rate: 10
+  learning_rate_a: 0.0001
+  discount_factor_g: 0.99
