--- a/configs/hyperparameters.yml
+++ b/configs/hyperparameters.yml
@@ -8,3 +8,14 @@ toy-env:
   network_sync_rate: 10
   learning_rate_a: 0.0001
   discount_factor_g: 0.99
+
+poke-singles-v1:
+  env_id: SinglesPlayer
+  replay_memory_size: 100000
+  batch_size: 64
+  epsilon_init: 1
+  epsilon_decay: 0.995
+  epsilon_min: 0.05
+  network_sync_rate: 10
+  learning_rate_a: 0.0001
+  discount_factor_g: 0.99
