--- a/configs/hyperparameters.yml
+++ b/configs/hyperparameters.yml
@@ -8,3 +8,14 @@ toy-env:
   network_sync_rate: 10
   learning_rate_a: 0.0001
   discount_factor_g: 0.99
+
+singles-env:
+  env_id: singles_env
+  replay_memory_size: 100000
+  batch_size: 64
+  epsilon_init: 1.0
+  epsilon_decay: 0.99
+  epsilon_min: 0.05
+  network_sync_rate: 500
+  learning_rate_a: 0.001
+  discount_factor_g: 0.99
