--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@ __pycache__/
 *.ipynb_checkpoints
 reports/
 models/
-pokemon-showdown
-poke-env
-Tutor.md
+# pokemon-showdown
+# poke-env
+# Tutor.md
 data/
 replays
 
