--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
 venv/
-__pycache__/
-*.pyc
-*.ipynb_checkpoints
-reports/
-models/
-# pokemon-showdown
-# poke-env
-# Tutor.md
-data/
-replays
-runs/
-
+poke-env/
+pokemon-showdown/
